# III-V_MQW_design

./: .gitignore  README.md  pyproject.toml
calibrations/: ingaasp_cband_example.json  ingaasp_oband_example.json
docs/: calibration_guideline.md  design_input.md  explanation.md
src/: BasicMQWDesign.py  CompareSpectrum.py  CriticalFilmStress.py  FitCalibration.py  MQWGainDesign.py  MQWGainSweep.py  calibration.py  gain.py  json_utils.py  kp_solver.py  metrics.py  spectrum_compare.py  spectrum_io.py  visualization.py
tests/: test_basic_design.py  test_calibration.py  test_cli_smoke.py  test_compare_spectrum.py  test_design_input.py  test_fit_calibration.py  test_gain.py  test_kp_solver.py  test_load_design_json.py  test_metrics.py  test_visualization.py
tests/fixtures/: ingaasp_cband_design.json  ingaasp_cband_input.json  ingaasp_oband_design.json  ingaasp_oband_input.json  suzuki2018_cband_input.json
